@@ -1,5 +1,6 @@
 15 December 2016: Wouter
 	- iana portlist update
+	- 64bit is default for windows builds.
 
 14 December 2016: Wouter
 	- Fix #1178: attempt to fix setup error at end, pop result values
